Bug 216468 - hp_wmi: HP Elitebook 865 G9 after update BIOS to version U82 01.02.01 Rev.A causing rfkill soft blocked wifi
Summary: hp_wmi: HP Elitebook 865 G9 after update BIOS to version U82 01.02.01 Rev.A c...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Platform_x86 (show other bugs)
Hardware: AMD Linux
: P1 normal
Assignee: drivers_platform_x86@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-09 14:38 UTC by chanchanchan
Modified: 2022-11-07 13:20 UTC (History)
2 users (show)

See Also:
Kernel Version: 5.19.7
Subsystem:
Regression: No
Bisected commit-id:


Attachments
journalctl output (192.19 KB, text/plain)
2022-09-21 06:54 UTC, chanchanchan
Details
attachment-6816-0.html (5.50 KB, text/html)
2022-10-27 15:51 UTC, jorge.lopez2
Details

Description chanchanchan 2022-09-09 14:38:03 UTC
Hi,


I have HP Elitebook 865 G9 running archlinux with kernel version 5.19.7. After upgrading BIOS to U82 01.02.01 Rev.A, the console is flooded strange char "^@" which printed out every second and makes login nearly impossible. Also the below messages were shown both in console and journal/dmesg every second:


usb 1-3: Device not responding to setup address.
usb 1-3: device not accepting address 4, error -71
usb 1-3: device descriptor read/all, error -71
usb usb1-port3: unable to enumerate USB device


Wifi is soft blocked by checking rfkill. When unblocked manually, after few seconds it would be soft blocked again. So I was suspecting something triggered rfkill to soft block wifi.


At the end it was fixed by removing hp_wmi module.
Comment 1 Mario Limonciello (AMD) 2022-09-20 17:37:29 UTC
How did you upgrade the BIOS and from what BIOS?  Could you possibly downgrade to the old BIOS to fix it?

I'm wondering if maybe this is a manifestation of the same problem that happened in https://bugzilla.kernel.org/show_bug.cgi?id=216448 .
Comment 2 chanchanchan 2022-09-21 06:54:13 UTC
Created attachment 301841 [details]
journalctl output

I performed the BIOS upgrade in windows11 via dual boot. I believe the old BIOS was Version 01.01.07. I can't confirm it but I checked my windows partitions it was the only BIOS downloaded before.

I cannot downgrade the BIOS - in fact this was my first action after upgrading BIOS and faced the issue.

Now I have added "blacklist hp_wmi" to modprobe so it won't load at boot. In the attached journal log I've tried to load the hp_wmi module (from Sep 21 14:43:09 to 14:43:24) and I face the problem again.
Comment 3 Mario Limonciello (AMD) 2022-09-21 12:35:39 UTC
OK, so it's not necessarily tied to a regression from the BIOS upgrade.  That was just the first thing you did.
Comment 4 Jingyuan Deng 2022-10-27 00:19:33 UTC
(In reply to chanchanchan from comment #2)
> Created attachment 301841 [details]
> journalctl output
> 
> I performed the BIOS upgrade in windows11 via dual boot. I believe the old
> BIOS was Version 01.01.07. I can't confirm it but I checked my windows
> partitions it was the only BIOS downloaded before.
> 
> I cannot downgrade the BIOS - in fact this was my first action after
> upgrading BIOS and faced the issue.
> 
> Now I have added "blacklist hp_wmi" to modprobe so it won't load at boot. In
> the attached journal log I've tried to load the hp_wmi module (from Sep 21
> 14:43:09 to 14:43:24) and I face the problem again.

Do you mean blacklisting hp_wmi can workaround?
Comment 5 Jingyuan Deng 2022-10-27 00:28:21 UTC
(In reply to Mario Limonciello (AMD) from comment #3)
> OK, so it's not necessarily tied to a regression from the BIOS upgrade. 
> That was just the first thing you did.

I have got more information about this problem. But I have no idea to deal with it. Those with bios version 01.01.07 and 01.01.12 does not have this problem. Bios version 01.02.01 breaks Linux with PCIE errors. I find bios version history that:

>                               Revision History
>                                U82 ROM Family


>Models Supported:      HP EliteBook 835 13 inch G9 Notebook PC 
>                       HP EliteBook 845 14 inch G9 Notebook PC
>                       HP EliteBook 865 16 inch G9 Notebook PC

>This BIOS upgrade package also includes the following drivers and firmware
>>versions:(only list appropriate ones)

>- Embedded Controller (EC) version: 09.47.00
>- AMD GOP x64 Rel Driver: Rev.3.4.4.Jun 21 2022.03:17:33
>- USB Type-C Power Delivery (PD) firmware version: 8.2.0
>- AMD PSP firmware version: 00.28.00.64
>- AMD SMU firmware version: 4.69.50.0

>PCR0(TPM2.0 SHA256) =
>>507E298B085334DA76664A475D4D953F34C87A1319E53A8B3A37A034A709A22A

>Version 01.02.01
>FIXES:  
>- Fixes an issue where an external monitor cannot be detected by the system
>>after the system is connected to a Thunderbolt dock.
>- Fixes an issue where system shuts down automatically after a monitor is
>>connected to the system through a USB-C port.
>- Fixes an issue where Keyboard backlight is always on even when system enters
>>sleep mode.
>- Fixes an issue where the system cannot resume from sleep mode.

>ENHANCEMENTS:  
>?- Updates the AMD Rembrandt Agesa reference code to 1.0.0.4.a patch I. 
>- Enhances Modern Standby performance. - Enables AMD Integrated Management
>>Technology (AIM-T). 

>?Version 01.01.12
>FIXES:  
>- Fixes an issue where the system does not function properly when connected to
>>a dock through a USB4 port. 
>- Fixes an issue where Hynix DDR5 memory does not power on properly. 
>- Fixes an issue where the system does not reboot properly.

>ENHANCEMENTS:  
>- Updates the AMD Rembrandt Agesa reference code to 1.0.0.2.a patch K.
>- Enhances Modern Standby performance.

>Version 01.01.07    - initial BIOS release.


Older bios version is still available from LVFS. If it was Lenovo it is easy to flash old version back. However, HP bans flash back for EliteBook. So there is no way.

See more at 

https://h30434.www3.hp.com/t5/Notebook-Operating-System-and-Recovery/EliteBook-845-G9-BIOS-Update-Causing-Problems/td-p/8490697
Comment 6 chanchanchan 2022-10-27 00:34:22 UTC
(In reply to Jingyuan Deng from comment #4)
> (In reply to chanchanchan from comment #2)
> > Created attachment 301841 [details]
> > journalctl output
> > 
> > I performed the BIOS upgrade in windows11 via dual boot. I believe the old
> > BIOS was Version 01.01.07. I can't confirm it but I checked my windows
> > partitions it was the only BIOS downloaded before.
> > 
> > I cannot downgrade the BIOS - in fact this was my first action after
> > upgrading BIOS and faced the issue.
> > 
> > Now I have added "blacklist hp_wmi" to modprobe so it won't load at boot.
> In
> > the attached journal log I've tried to load the hp_wmi module (from Sep 21
> > 14:43:09 to 14:43:24) and I face the problem again.
> 
> Do you mean blacklisting hp_wmi can workaround?

Yes, I also see from your later comment the hp forum thread also mentioned such workaround.

As blacklisting works fine to me, i did not attempt to downgrade bios.
Comment 7 Mario Limonciello (AMD) 2022-10-27 15:27:24 UTC
[Public]

+Jorge,

Can you take a look at this?

Something that comes to mind to me is maybe the more modern
platforms shouldn't be using hp_wmi's RFKILL feature anymore.

Aren't there rfkill services provided by all modern wifi drivers now?

> -----Original Message-----
> From: bugzilla-daemon@kernel.org <bugzilla-daemon@kernel.org>
> Sent: Thursday, October 27, 2022 09:58
> To: platform-driver-x86@vger.kernel.org
> Subject: [Bug 216468] hp_wmi: HP Elitebook 865 G9 after update BIOS to
> version U82 01.02.01 Rev.A causing rfkill soft blocked wifi
> 
> https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fbugz
> illa.kernel.org%2Fshow_bug.cgi%3Fid%3D216468&amp;data=05%7C01%7Cm
> ario.limonciello%40amd.com%7C01a1b92da9704ede465f08dab82bbf27%7C3d
> d8961fe4884e608e11a82d994e183d%7C0%7C0%7C638024795272794223%7CU
> nknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI
> 6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&amp;sdata=ZVHHH70%2
> FoyrXWVbad9GvomwvlYaGwhpdQEiGEXJNFcg%3D&amp;reserved=0
> 
> Mario Limonciello (AMD) (mario.limonciello@amd.com) changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>           Component|Platform                    |Platform_x86
>            Assignee|drivers_platform@kernel-bug
> |drivers_platform_x86@kernel
>                    |s.osdl.org                  |-bugs.osdl.org
> 
> --
Comment 8 jorge.lopez2 2022-10-27 15:51:11 UTC
Created attachment 303100 [details]
attachment-6816-0.html

Ok, I will take a look.


Regards,

Jorge Lopez
Hewlett-Packard

"Once you stop learning, you start dying"
Albert Einstein

From: Limonciello, Mario <Mario.Limonciello@amd.com>
Sent: Thursday, October 27, 2022 10:27 AM
To: bugzilla-daemon@kernel.org; platform-driver-x86@vger.kernel.org; Lopez, Jorge A (Security) <jorge.lopez2@hp.com>
Cc: Hans de Goede <hdegoede@redhat.com>
Subject: RE: [Bug 216468] hp_wmi: HP Elitebook 865 G9 after update BIOS to version U82 01.02.01 Rev.A causing rfkill soft blocked wifi

CAUTION: External Email
[Public]

+Jorge,

Can you take a look at this?

Something that comes to mind to me is maybe the more modern
platforms shouldn't be using hp_wmi's RFKILL feature anymore.

Aren't there rfkill services provided by all modern wifi drivers now?

> -----Original Message-----
> From: bugzilla-daemon@kernel.org<mailto:bugzilla-daemon@kernel.org>
> <bugzilla-daemon@kernel.org<mailto:bugzilla-daemon@kernel.org>>
> Sent: Thursday, October 27, 2022 09:58
> To:
> platform-driver-x86@vger.kernel.org<mailto:platform-driver-x86@vger.kernel.org>
> Subject: [Bug 216468] hp_wmi: HP Elitebook 865 G9 after update BIOS to
> version U82 01.02.01 Rev.A causing rfkill soft blocked wifi
>
>
> https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fbugz<https://nam11.safelinks.protection.outlook.com/?url=https%3A%2F%2Fbugz>
>
> illa.kernel.org%2Fshow_bug.cgi%3Fid%3D216468<http://illa.kernel.org%2Fshow_bug.cgi%3Fid%3D216468>
> &amp;data=05%7C01%7Cm
> ario.limonciello%40amd.com%7C01a1b92da9704ede465f08dab82bbf27%7C3d
> d8961fe4884e608e11a82d994e183d%7C0%7C0%7C638024795272794223%7CU
> nknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI
> 6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&amp;sdata=ZVHHH70%2
> FoyrXWVbad9GvomwvlYaGwhpdQEiGEXJNFcg%3D&amp;reserved=0
>
> Mario Limonciello (AMD)
> (mario.limonciello@amd.com<mailto:mario.limonciello@amd.com>) changed:
>
> What |Removed |Added
> ----------------------------------------------------------------------------
> Component|Platform |Platform_x86
> Assignee|drivers_platform@kernel-bug
> |drivers_platform_x86@kernel
> |s.osdl.org |-bugs.osdl.org
>
> --
Comment 9 Mario Limonciello (AMD) 2022-10-28 16:10:04 UTC
Jorge submitted this patch to solve the issue:

https://lore.kernel.org/platform-driver-x86/20221028155527.7724-1-jorge.lopez2@hp.com/T/#u
Comment 10 Mario Limonciello (AMD) 2022-11-07 13:20:09 UTC
That patch was submitted to 6.1-rc5.  It's CC stable and so it should flow to .y for all still supported kernel releases.

Note You need to log in before you can comment on or make changes to this bug.